# bio-prak

./: .gitignore  .~lock.compute.ods#  Aligned Accessibilities.ipynb  Drach.ipynb  Extremes.ipynb  FIle Processing.ipynb  Milestones.ipynb  PrakBioinfSS2026_students.ipynb  Praktikum.ipynb  Presentation.ipynb  README.md  Sanity Checks.ipynb  Savings.ipynb  SnoRNA.ipynb  Test.ipynb  compute.ods  myrna_ss.ps  sequence.fa  sequence.out  sequence_dp.ps  sequence_mod_dp.ps  sequence_mod_ss.ps  sequence_ss.ps  setup_conda.sh  setup_software.sh
mypython/: algorithms.py  plot.py  utils.py
rust/: Cargo.toml
rust/binarize/: Cargo.toml
rust/binarize/src/: accessibility_file.rs  main.rs  model_details.rs  possibly_gzip_file.rs
rust/test/: Cargo.toml
rust/test/src/: accessibility_file.rs  lib.rs  main.rs
rust/viennarna-rs/: Cargo.toml
rust/viennarna-rs/src/: fold_compound.rs  lib.rs  main.rs  vrna_string.rs
src/: util.py
src/files/: assembled_region_fasta_files.py  assembled_region_files.py  assembled_region_intersects_files.py  assembled_region_local_intersects_assembled_files.py  assembled_region_local_intersects_files.py  bgzipped_files.py  compute.py  file.py  file_category.py  files.py  filtered_files.py  full_files.py  original_files.py  renamed_files.py
