[package]
name = "viennarna-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
librna-sys = { git = "https://github.com/fncnt/librna-sys.git" }
rand = "0.10.2"
flate2 = "1.1.9"
csv = "1.4.0"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
rayon = "1.12.0"
fasta = "0.1.3"
